Added Chicken alfredo html page
Linked alfredo Html page
Added image of dish
Added list of ingredients and instructions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Odin Recipes</h1>
+
+    <a href="recipes/alfredo.html">Chicken Alfredo</a>
+    
     
 </body>
 </html>
