--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/alfredo.html">Chicken Alfredo</a>
-    
-    
+    <ul>
+        <li><a href="recipes/alfredo.html">Chicken Alfredo</a></li>
+        <li><a href="recipes/sliders.html">Baked Ham and Cheese Sliders</a></li>
+        <li><a href="recipes/sliders.html">Bacon-Wrapped Jalapeño Poppers</a></li>
+    </ul>
 </body>
 </html>
