--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="recipes/alfredo.html">Chicken Alfredo</a></li>
         <li><a href="recipes/sliders.html">Baked Ham and Cheese Sliders</a></li>
-        <li><a href="recipes/sliders.html">Bacon-Wrapped Jalapeño Poppers</a></li>
+        <li><a href="recipes/poppers.html">Bacon-Wrapped Jalapeño Poppers</a></li>
     </ul>
 </body>
 </html>
